# rust-web

./: .gitignore  Cargo.toml  LICENSE
playground/: Cargo.toml
playground/src/: main.rs
playground/src/oidc/: claims.rs  discovery.rs  mod.rs
web-actix/: Cargo.toml
web-actix/src/: main.rs
web-rocket/: Cargo.toml
web-rocket/examples/: discovery.rs
web-rocket/src/: auth.rs  debug.rs  error.rs  main.rs
web-rocket/src/auth/: connection.rs  cookies.rs  guard.rs  mod.rs  routes.rs
