[package]
name = "playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4"
env_logger = "0.9"
structopt = "0.3"
jsonwebtoken = "=7.2"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
chrono = "0.4"
percent-encoding = "2.1"
url = "2.2"
anyhow = "1.0"
openidconnect = "2.1"