[package]
name = "web-rocket"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
dotenv = "0.15.0"
log = "0.4.14"
env_logger = "0.9"
structopt = "0.3.23"
jsonwebtoken = "=7.2"
serde = {version = "1.0.130", features = ["derive"] }
serde_json = "1.0.68"
thiserror = "1.0.29"
chrono = "0.4.19"
percent-encoding = "2.1.0"
url = "2.2.2"
anyhow = "1.0.44"
openidconnect = "2.1.0"